[gd_scene load_steps=2 format=3 uid="uid://86mwkcomxk6f"]

[ext_resource type="Script" path="res://Node2D.gd" id="1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="Current_Time" type="HBoxContainer" parent="."]
offset_left = 20.0
offset_top = 100.0
offset_right = 1000.0
offset_bottom = 200.0
alignment = 1

[node name="Title" type="Label" parent="Current_Time"]
layout_mode = 2
text = "현재시각: "

[node name="Hour" type="Label" parent="Current_Time"]
layout_mode = 2

[node name="Minute" type="Label" parent="Current_Time"]
layout_mode = 2

[node name="Second" type="Label" parent="Current_Time"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 22.0
offset_top = 500.0
offset_right = 1002.0
offset_bottom = 540.0

[node name="StatusLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Status: "

[node name="SetupButton" type="Button" parent="."]
offset_left = 780.0
offset_top = 540.0
offset_right = 880.0
offset_bottom = 590.0
text = "SETUP"

[node name="DelayButton_1" type="Button" parent="."]
offset_left = 898.0
offset_top = 540.0
offset_right = 998.0
offset_bottom = 590.0
text = "+1 Min"

[node name="DealyButton_2" type="Button" parent="."]
offset_left = 1016.0
offset_top = 540.0
offset_right = 1116.0
offset_bottom = 590.0
text = "+10 Min"

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="pressed" from="SetupButton" to="." method="_on_SetupButton_pressed"]
[connection signal="pressed" from="DelayButton_1" to="." method="_on_SetupButton_pressed"]
[connection signal="pressed" from="DealyButton_2" to="." method="_on_SetupButton_pressed"]
